--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.89.0",
@@ -24,10 +25,13 @@
     "next": "^15.4.0-canary.48",
     "next-auth": "^5.0.0-beta.28",
     "next-sanity": "^9.8.58-canary.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.89.0",
     "sanity-plugin-markdown": "^5.1.0",
+    "slugify": "^1.6.6",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.18",
     "tailwind-merge": "^3.3.0"
   },
